# CarissaBot

./: .gitignore  CMakeLists.txt  README.md  chess.cpp  demo.cpp  main.cpp  tester.cpp
CarissaBot_VS/: CMakeLists.txt  CMakeSettings.json  CarissaBot_VS.cpp  CarissaBot_VS.h  main.cpp
MINGW CHESS LIBRARY (ARCHIVED)/: CMakeLists (ARCHIVED).txt  README.md  chess.h  main.cpp  tester.cpp
model/: architecture.txt  chess_dataset.py  data_generation.py  data_manip.py  dbn.py  loss_plot.py  model.py  rbm.py  slice_dataset.py  test.py  torch_script_model.py  train.py
python_version/: bot_player.py  chess_game.py  human_player.py  model.py
